Layout broken fixed

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -16,3 +16,7 @@
 body {
   min-width: 1000px;
 }
+
+.w-fit {
+  width: fit-content;
+}
